完成Excel导入时间格式错误修复，完成导航高亮

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -99,6 +99,13 @@
         background-color: $menuHover !important;
       }
     }
+    // 导航高亮
+    .router-link-active{
+      background-color: $menuHover !important;
+      span,svg{
+        color: $menuActiveText !important;
+      }
+    }
 
     .is-active>.el-submenu__title {
       color: $subMenuActiveText !important;
